--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,10 @@
 {
-    "name": "jhowmael/MHS",
-    "authors": [
-        {
-            "name": "Jonatan Ismael",
-            "email": "jonatan.ismael996@gamil.com"
-        }
-    ],
-    
+    "name": "jonat/mhs",
+
     "require": {},
     "autoload": {
         "psr-4": {
-            "app\\": "app/"
+            "app\\" : "app/" 
         }
     }
 }
