First updated commit | adding navbar | URI routes adjusted | general configs

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "name": "Jonas"
     }
   ],
-  "require": {},
+  "require": {
+    "twig/twig": "^3.4"
+  },
   "autoload": {
     "psr-4": {
       "app\\": "app/"
